lab1/Test/L1-A-8-88.output
Error Type B at Line 24
Error Type B at Line 48
Error Type B at Line 50
Error Type B at Line 62
Error Type B at Line 63
