lab1/Test/L1-A-8-88.cmm
struct {
  struct Nac0Ie3H9kSdJwrs q0hpcMFT ;
  struct h5HT17tpWU5TkkXO_9N cu ;
  int i7 = jMNrcdlRjvEBl < oz2yvbcH4hq - ENQQKkWBZO2y3p 
    [ cb3Az = r8ySZTpzynMaRcgil || sa7daQbxl2D32Yr && 
    h8PNkxj_AbZw7cMfjbm > ROTDdY4eyWspHzgIe + geCiuSRBhMvk 
    ( mu , NYKg1GBk != uQeLF7qqII_eyV - brVBhvakcl3ZPcvc3nv 
    * SjxqyhwrrH [ FWCmFr <= iE3NYSj7Pov_BbEKH - RskbPIwD 
    * AY_F [ UD3dj = CKv16LHY5C3HrC7 = w6kXsyk == - EchND9D8dF1 
    ( gHQsAFKO3DsPtObVEok7 = YX51wsnZiudtKYEg0 = Myvg2BBkV3_rlSyf 
    * - ( hF_Rinpm55SIuGH = NS1Scrn && HwYNHs0DMAtDfEg 
    > tJgtX4vWg1TprhxdJv6 ) ) ] ] >= NHiW5wT7ll57YrVoJOmo 
    ( 794221349 ) ) ] * 637078203.37161408 / ! - Lg44rROEYnX 
    ( ) . Kz , BbbO3_idtltYUnC ;
}vg2G2ZcjDre0C2 ( int Nrj_6z [ 510070199 ] , float 
  LCc1gObmI0SrG5oEZb ) {
}
struct c pCDKMl 
;
int ;
int MbohAtxa_tmEkH0OLt ( ) {
  while ( bNc )   LhUfAZjki ;

}>= 
int ;
struct {
  int nFMqiurr ;
  int XIS8aKHD9cniR1TM ;
  struct OJ54JPaDv2 {
  }ZJY7l7fl7qYGyks ;
}PLL4JvKcNDmqOz2fJmu1 , U1js43Z 

;
int ou318Ss ( ) {
}
int ;
int XlfqciI2Mg8MNFFMB ( ) {
}
int X ( ) {
}
int ;
int ggG ( ) {
}
int BfMchnplLZUoLmH4Zu ( ) {
}
int ;
int EIutCYi ( ) {
 }
int o5j23 ( ) {
   if ( AFP1IEm4Qy0kV1 )   return auxsxMFLwFc ;
else   if ( vgItl5zp4DQfqMv88v ) {
  }

}
int ;
int xs6wiNH7M1DBtOKVvtit ( ) {
  WlYW ;
  Km ;
  if ( QTbdxo5s0Nzt7 )   OhMh3cOR ;
else   ygE ;

}int 
+ 